<resources>
    <string name="app_name">Sales Tracking System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="create_an_admin_account">Create an admin account</string>
    <string name="admin_name">Enter Your Name</string>
    <string name="admin_email">Email Address</string>
    <string name="admin_phone">Phone Number</string>
    <string name="admin_password">Password</string>
    <string name="admin_address">Address</string>
    <string name="signUp_button">SignUp</string>
    <string name="login_register_button">Already registered! Login me</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Login_header">Login</string>
    <string name="Signup_header">SignUp</string>
    <string name="notes">notes</string>
    <string name="take_note">Take Note</string>
    <string name="home_navigation">Home</string>
    <string name="profile_navigation">Profile</string>
    <string name="search_party">Search party name</string>
    <string name="search_leave">Search leave type</string>
    <string name="notification_navigation">Notification</string>

    <!--    <string name="uid">Enter comapny id</string>-->
    <string name="uid1"> Unique company Id</string>
    <string name="login_link">Already registered? Login here</string>
    <string name="register">Register</string>
    <string name="register_link">New here? Register here</string>
    <string name="no_notification">No notifications available</string>
    <string name="no_leaves">No leaves applied</string>
    <string name="name">Name</string>
    <string name="mob_no">Mobile No:</string>
    <string name="party_address">Address :</string>
    <string name="update">Update </string>
    <string name="sign_Out">Sign Out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_email">Send reset password link</string>
    <string name="edit">edit</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="reason">Reason</string>
    <string name="from_to_date_list">Dates :</string>
    <string name="reason_list">Reason :</string>
    <string name="leave_type_list">Type :</string>
    <string name="status">Status :</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="leave">Leave</string>
    <string name="selected_item">Selected item:</string>
    <string name="apply_for_leave">Apply for leave</string>
    <string name="leave_type">Leave type</string>
    <string name="add_party"> Click to Add Party</string>
    <string name="amount_received">Amount Received</string>
    <string name="collection_note">Collection Note</string>
    <string name="collection_task">Collections</string>
    <string name="mobile_no">Mobile No</string>
    <string name="add_collection">Add Collection</string>
    <string name="party_name">Party name :</string>
    <string name="amount_recevied_collection">Amount Received :</string>
    <string name="collection_type">Collection type :</string>
    <string name="date">Date :</string>
    <string name="no_collection">No collections taken</string>
    <string name="employee">Employee name :</string>
    <string name="note">Note :</string>
    <string name="products">Products</string>
    <string name="add_product">Add Product</string>
    <string name="grand_total">Grand Total</string>
    <string name="rs">Rs 0.00</string>
    <string name="order_note">Order note</string>
    <string name="orders">Orders</string>
    <string name="Product_name">Product Name</string>
    <string name="Product_price">Rs: </string>
    <string name="Product_quantity">Quantity</string>
    <string name="no_product">No Product Added</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="mark_attendence">Mark Attendence</string>
    <string name="product_add_description">Description :</string>
    <string name="Product__add_price">Price :</string>
    <string name="search_view">Search Here</string>
    <string name="no_party">No party added</string>
    <string name="zero">0</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="place_order">Place Order</string>
    <string name="cart_icon">Cart Icon</string>
    <string name="total">Total:₹ %1$s</string>
    <string name="qty">Qty :</string>
    <string name="continue_taking_order">Continue taking Order</string>
    <string name="thanks_for_order">Thanks for your order.</string>
    <string name="order_amount">Order amount :</string>
    <string name="take_order">Take Order</string>
    <string name="address">Address :</string>
    <string name="phone_no">Phone No :</string>
    <string name="order_product_details">Ordered product details</string>
    <string name="no_orders_taken">No orders taken</string>
    <string name="order_date">Order date :</string>
    <string name="view_details">View details</string>
    <string name="location_service">Location Services</string>
    <string name="verify">"To continue, let your device
turn on location using Google's
Location Service</string>
    <string name="turn_on_location_service">Turn On Location Service</string>
    <string name="no_thanks">No thanks</string>
    <string name="ok">Ok</string>
    <string name="start">Start</string>
    <string name="checkin_out">Check IN/OUT</string>
    <string name="googleMapApiKey">AIzaSyDklqaN4Gxa4Ej2xhj936gfEmvbG7eOtjk</string>
    <string name="Hello">Hello, %1$s!</string>
    <string name="title">Sales Employee Tracking System</string>
    <string name="employee_splash">Employee</string>
    <string name="new_account">Create a New Account</string>
    <string name="party_details">Party details</string>
    <string name="order_taken">Order taken on</string>
    <string-array name="leave_type">
        <item>Sick Leave</item>
        <item>Family Responsibility Leave</item>
        <item>Study Leave</item>
        <item>Leave for religious holiday</item>
        <item>Annual Leave</item>
        <item>Leave in Lieu</item>
        <item>Compassionate Leave</item>
        <item>Paternity Leave</item>
        <item>Miscellaneous/Others</item>
    </string-array>
    <string-array name="payment_type">
        <item>Cash</item>
        <item>Cheque</item>
    </string-array>

    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>
</resources>