<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/orderList"
        android:icon="@drawable/order_icon"
        android:title="@string/orders" />

    <item
        android:id="@+id/collectionList"
        android:icon="@drawable/collectionicon"
        android:title="@string/collection_task" />
    <item
        android:id="@+id/leaveList"
        android:icon="@drawable/leaves_icon"
        android:title="@string/leave" />

    <item
        android:id="@+id/Notes"
        android:icon="@drawable/notes_icon"
        android:title="@string/take_note" />

    <item
        android:id="@+id/tracking"
        android:icon="@drawable/tracking_employee"
        android:title="@string/checkin_out" />




</menu>